--- a/articles/azure-resource-manager/toc.yml
+++ b/articles/azure-resource-manager/toc.yml
@@ -44,6 +44,19 @@ items:
     href: https://azure.microsoft.com/resources/samples/?sort=0&service=azure-resource-manager
 - name: Begrepp
   items:
+  - name: Mallstruktur
+    href: resource-group-authoring-templates.md
+    items:
+    - name: Parametrar
+      href: resource-manager-templates-parameters.md
+    - name: Variabler
+      href: resource-manager-templates-variables.md
+    - name: Functions
+      href: resource-group-authoring-templates.md#functions
+    - name: Resurser
+      href: resource-manager-templates-resources.md
+    - name: Utdata
+      href: resource-manager-templates-outputs.md
   - name: Resursprovidrar och resurstyper
     href: resource-manager-supported-services.md
   - name: Hanteringsgrupper
@@ -65,65 +78,50 @@ items:
   items:
   - name: Skapa mallar
     items:
-    - name: Mallavsnitt
-      href: resource-group-authoring-templates.md
-      items:
-      - name: Parametrar
-        href: resource-manager-templates-parameters.md
-      - name: Variabler
-        href: resource-manager-templates-variables.md
-      - name: Functions
-        href: resource-group-authoring-templates.md#functions
-      - name: Resurser
-        href: resource-manager-templates-resources.md
-      - name: Utdata
-        href: resource-manager-templates-outputs.md
-    - name: Länkade och kapslade mallar
-      href: resource-group-linked-templates.md
-    - name: Resursberoenden
+    - name: Skapa resursgrupper och resurser i prenumerationen
+      href: deploy-to-subscription.md
+    - name: Definiera resursberoenden
       href: resource-group-define-dependencies.md
+    - name: Modularisera mallar
+      href: resource-group-linked-templates.md
+    - name: Hantera hemligheter
+      href: resource-manager-keyvault-parameter.md
     - name: Skapa flera instanser
       href: resource-group-create-multiple.md
-    - name: Skapa resursgrupp i mall
-      href: create-resource-group-in-template.md
-    - name: Skapa resurser i prenumerationen
-      href: deploy-to-subscription.md
-    - name: Uppdatera resurs
+    - name: Använda malltillägg
+      href: resource-manager-use-extensions.md
+    - name: Uppdatera resurser
       href: /azure/architecture/building-blocks/extending-templates/update-resource
-  - name: Distribuera
+  - name: Distribuera mallar
     items:
-    - name: Azure PowerShell
-      items:
-      - name: Distribuera mallen
-        href: resource-group-template-deploy.md
-      - name: Distribuera privat mall med SAS-token
-        href: resource-manager-powershell-sas-token.md
-      - name: Exportera mall och distribuera om
-        href: resource-manager-export-template-powershell.md
-    - name: Azure CLI
-      items:
-      - name: Distribuera mallen
-        href: resource-group-template-deploy-cli.md
-      - name: Distribuera privat mall med SAS-token
-        href: resource-manager-cli-sas-token.md
-      - name: Exportera mall och distribuera om
-        href: resource-manager-export-template-cli.md
-    - name: Azure Portal
-      items:
-      - name: Distribuera resurser
-        href: resource-group-template-deploy-portal.md
-      - name: Exportera mall
-        href: resource-manager-export-template.md
-    - name: REST-API
+    - name: Distribuera med hjälp av portalen
+      href: resource-group-template-deploy-portal.md
+    - name: Distribuera med hjälp av Azure CLI
+      href: resource-group-template-deploy-cli.md
+    - name: Distribuera med hjälp av Azure PowerShell
+      href: resource-group-template-deploy.md
+    - name: Distribuera med hjälp av REST API
       href: resource-group-template-deploy-rest.md
-    - name: Flera resursgrupper eller prenumerationer
+    - name: Exportera mallar
+      items:
+      - name: Använda portalen
+        href: resource-manager-export-template.md
+      - name: Använda Azure CLI
+        href: resource-manager-export-template-cli.md
+      - name: Använda Azure PowerShell
+        href: resource-manager-export-template-powershell.md
+    - name: Säkra mallar med SAS-token
+      items:
+      - name: Använda Azure CLI
+        href: resource-manager-cli-sas-token.md
+      - name: Använda PowerShell
+        href: resource-manager-powershell-sas-token.md
+    - name: Distribuera till flera resursgrupper eller prenumerationer
       href: resource-manager-cross-resource-group-deployment.md
     - name: Kontinuerlig integrering med Azure DevOps Services
       href: ../vs-azure-tools-resource-groups-ci-in-vsts.md
       maintainContext: true
-    - name: Skicka säkra värden under distributionen
-      href: resource-manager-keyvault-parameter.md
-  - name: Hantera
+  - name: Hantera mallar
     items:
     - name: Azure PowerShell
       href: powershell-azure-resource-manager.md
@@ -146,13 +144,13 @@ items:
       href: resource-manager-api-authentication.md
     - name: Lås resurser
       href: resource-group-lock-resources.md
-  - name: Granska
+  - name: Granska distributioner
     items:
     - name: Visa aktivitetsloggar
       href: resource-group-audit.md
     - name: Visa distributionsåtgärder
       href: resource-manager-deployment-operations.md
-  - name: Felsöka
+  - name: Felsöka distributioner
     items:
     - name: Felsöka vanliga distributionsfel
       href: resource-manager-common-deployment-errors.md
@@ -237,9 +235,9 @@ items:
     href: resource-manager-personal-data.md
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=azure-resource-manager
-ms.openlocfilehash: 47af6826974759a1b0dfea7949429c5acaca004d
-ms.sourcegitcommit: 1c1f258c6f32d6280677f899c4bb90b73eac3f2e
+ms.openlocfilehash: 166a23d480db7dfda7a78a5a63e7717b5e721bb9
+ms.sourcegitcommit: c2e61b62f218830dd9076d9abc1bbcb42180b3a8
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/11/2018
-ms.locfileid: "53252345"
+ms.lasthandoff: 12/15/2018
+ms.locfileid: "53436797"
