--- a/articles/batch-ai/TOC.yml
+++ b/articles/batch-ai/TOC.yml
@@ -3,8 +3,12 @@ items:
   href: index.yml
 - name: Översikt
   items:
+  - name: Vad händer med Batch AI?
+    displayName: retire, retired, retiring, deprecate, deprecated, deprecating, happening
+    href: overview-what-happened-batch-ai.md
   - name: Vad är Batch AI?
     href: overview.md
+  expanded: true
 - name: Snabbstarter
   items:
   - name: Skapa kluster – CLI
@@ -13,7 +17,6 @@ items:
     href: quickstart-create-cluster-portal.md
   - name: Träna en AI-modell – CLI
     href: quickstart-tensorflow-training-cli.md
-  expanded: true
 - name: Självstudier
   items:
   - name: Distribuerad träning med Horovod
@@ -64,9 +67,9 @@ items:
     href: https://azure.microsoft.com/pricing/calculator/
   - name: Regional tillgänglighet
     href: https://azure.microsoft.com/regions/services/
-ms.openlocfilehash: ad3ffb48dd035f189054c40c9c1a3466230ac11d
-ms.sourcegitcommit: ebd06cee3e78674ba9e6764ddc889fc5948060c4
+ms.openlocfilehash: 8fb9ce00a162a28554b4ec02b190d0261dbde623
+ms.sourcegitcommit: c37122644eab1cc739d735077cf971edb6d428fe
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/07/2018
-ms.locfileid: "44051698"
+ms.lasthandoff: 12/14/2018
+ms.locfileid: "53410201"
