--- a/articles/batch-ai/index.yml
+++ b/articles/batch-ai/index.yml
@@ -1,25 +1,25 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 16fa5136457616644b91b4796769ce4050f6a462
-ms.sourcegitcommit: f20e43e436bfeafd333da75754cd32d405903b07
+ms.openlocfilehash: 8cd5101c7e979c63d274f1534a3fec8190e00317
+ms.sourcegitcommit: c37122644eab1cc739d735077cf971edb6d428fe
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/17/2018
-ms.locfileid: "49385955"
+ms.lasthandoff: 12/14/2018
+ms.locfileid: "53409504"
 documentType: LandingData
-title: Dokumentation om Azure Batch AI (förhandsversion)
+title: Dokumentation om Azure Batch AI (DRAS TILLBAKA)
 metadata:
-  title: Dokumentation om Azure Batch AI (förhandsversion)
+  title: Dokumentation om Azure Batch AI (DRAS TILLBAKA)
   meta.description: Azure Batch AI is a managed service to help data scientists and AI researchers train and test machine learning and AI models at scale in Azure - without having to manage complex infrastructure. Learn how to use Batch AI with our quickstarts, tutorials, and samples.
   services: batch-ai
-  author: dlepow
-  manager: jeconnock
+  author: j-martens
+  manager: cjgronlun
   layout: LandingPage
   ms.service: batch-ai
   ms.topic: landing-page
-  ms.date: 08/16/2018
-  ms.author: danlep
+  ms.date: 12/14/2018
+  ms.author: jmartens
 abstract:
-  description: Azure Batch AI är en hanterad tjänst som hjälper datatekniker och AI-forskare att träna och testa maskininlärnings- och AI-modeller i skala i Azure – utan att behöva hantera komplex infrastruktur. Lär dig hur du använder Batch AI med våra snabbstarter, självstudier och exempel.
+  description: <div class="NOTE"><p>Obs!</p><p><strong>Azure Batch AI håller på att dras tillbaka.</strong> Stöd för den här tjänsten dras tillbaka inkrementellt. Funktionerna i Azure Batch AI är nu tillgängliga som ett hanterat beräkningsmål i Azure Machine Learning-tjänsten. Mer information finns i <a href="overview-what-happened-batch-ai" data-linktype="relative-path">Vad händer med Batch AI?</a></p></div>
 sections:
 - title: Snabbstarter på 5 minuter
   items:
