--- a/articles/hdinsight/index.yml
+++ b/articles/hdinsight/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: dd8976bc9c78045830ab499f48775bcb051f6c71
-ms.sourcegitcommit: 668b486f3d07562b614de91451e50296be3c2e1f
+ms.openlocfilehash: bf2b326b6e0003b9a690e560d5a312f16659dad9
+ms.sourcegitcommit: c37122644eab1cc739d735077cf971edb6d428fe
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/19/2018
-ms.locfileid: "49455750"
+ms.lasthandoff: 12/14/2018
+ms.locfileid: "53406751"
 documentType: LandingData
 title: Dokumentation om Azure HDInsight
 metadata:
@@ -70,12 +70,12 @@ sections:
   - type: list
     style: unordered
     items:
-    - html: Hadoop &#58; <a href="/azure/hdinsight/hdinsight-analyze-flight-delay-data-linux">Utföra ETL-åtgärder</a> | <a href="/azure/hdinsight/hdinsight-hadoop-create-linux-clusters-adf">Skapa kluster på begäran</a>
-    - html: Spark &#58; <a href="/azure/hdinsight/spark/apache-spark-load-data-run-query">Köra interaktiva frågor</a> | <a href="/azure/hdinsight/spark/apache-spark-use-bi-tools">Visualisera data</a> | <a href="/azure/hdinsight/spark/apache-spark-ipython-notebook-machine-learning">Maskininlärning</a>
-    - html: Kafka &#58; <a href="/azure/hdinsight/hdinsight-apache-kafka-spark-structured-streaming">Strukturerad strömning med Kafka</a> | <a href="/azure/hdinsight/hdinsight-apache-storm-with-kafka">Använda med Storm i HDInsight</a> | <a href="/azure/hdinsight/kafka/apache-kafka-producer-consumer-api">Använda producent- och konsument-API:er i Kafka</a>
-    - html: HBase &#58; <a href="/azure/hdinsight/hbase/apache-hbase-provision-vnet">Skapa HBase-kluster i ett VNET</a> | <a href="/azure/hdinsight/hdinsight-phoenix-in-hdinsight">Använda Apache Phoenix</a> | <a href="/azure/hdinsight/hdinsight-using-spark-query-hbase">Ansluta till Spark</a>
+    - html: Apache Hadoop &#58; <a href="/azure/hdinsight/hdinsight-analyze-flight-delay-data-linux">Utföra ETL-åtgärder</a> | <a href="/azure/hdinsight/hdinsight-hadoop-create-linux-clusters-adf">Skapa kluster på begäran</a>
+    - html: Apache Spark &#58; <a href="/azure/hdinsight/spark/apache-spark-load-data-run-query">Köra interaktiva frågor</a> | <a href="/azure/hdinsight/spark/apache-spark-use-bi-tools">Visualisera data</a> | <a href="/azure/hdinsight/spark/apache-spark-ipython-notebook-machine-learning">Maskininlärning</a>
+    - html: Apache Kafka &#58; <a href="/azure/hdinsight/hdinsight-apache-kafka-spark-structured-streaming">Strukturerad strömning med Kafka</a> | <a href="/azure/hdinsight/hdinsight-apache-storm-with-kafka">Använda med Storm i HDInsight</a> | <a href="/azure/hdinsight/kafka/apache-kafka-producer-consumer-api">Använda API:er för producent och konsument i Kafka</a>
+    - html: Apache HBase &#58; <a href="/azure/hdinsight/hbase/apache-hbase-provision-vnet">Skapa HBase-kluster i ett virtuellt nätverk</a> | <a href="/azure/hdinsight/hdinsight-phoenix-in-hdinsight">Använda Apache Phoenix</a> | <a href="/azure/hdinsight/hdinsight-using-spark-query-hbase">Ansluta till Spark</a>
     - html: Interactive Query &#58; <a href="/azure/hdinsight/interactive-query/apache-hadoop-connect-hive-power-bi-directquery">Ansluta med Power BI med Direct Query</a>
-    - html: Storm &#58; <a href="/azure/hdinsight/storm/apache-storm-develop-java-topology">Skapa Storm-topologi i Java</a> | <a href="/azure/hdinsight/storm/apache-storm-deploy-monitor-topology-linux">Distribuera Storm-topologier i HDInsight</a> | <a href="/azure/hdinsight/storm/apache-storm-write-data-lake-store">Skriva från Storm till Data Lake Store</a>
+    - html: Apache Storm &#58; <a href="/azure/hdinsight/storm/apache-storm-develop-java-topology">Skapa Storm-topologi i Java</a> | <a href="/azure/hdinsight/storm/apache-storm-deploy-monitor-topology-linux">Distribuera Storm-topologier i HDInsight</a> | <a href="/azure/hdinsight/storm/apache-storm-write-data-lake-store">Skriva från Storm till Data Lake Store</a>
     - html: 'ML Services: <a href="/azure/hdinsight/r-server/r-server-submit-jobs-r-tools-vs">Använda R-verktyg för Visual Studio</a>'
 - title: Referens
   items:
