--- a/articles/sql-database/index.yml
+++ b/articles/sql-database/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 7591e1303e69df522a02b08a079ac00bdac5f6bc
-ms.sourcegitcommit: b0f39746412c93a48317f985a8365743e5fe1596
+ms.openlocfilehash: 0049468330a9fcb26f023de2a8adb5dfd1544321
+ms.sourcegitcommit: c2e61b62f218830dd9076d9abc1bbcb42180b3a8
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/04/2018
-ms.locfileid: "52870307"
+ms.lasthandoff: 12/15/2018
+ms.locfileid: "53436814"
 documentType: LandingData
 title: Dokumentation om Azure SQL Database
 metadata:
@@ -48,7 +48,7 @@ sections:
       image:
         src: media/index/i_perftier.svg
       title: Pris-/tjänstnivåer
-    - href: /azure/sql-database/sql-database-scale-resources
+    - href: /azure/sql-database/sql-database-scalability-index
       html: <p>Du kan enkelt skala upp, skala ut eller dela upp dina databaser efter behov och därmed förbättra programmets prestanda.</p>
       image:
         src: media/index/i_scale.svg
@@ -78,11 +78,11 @@ sections:
       image:
         src: media/index/i_security.svg
       title: Avancerad säkerhet
-    - href: /azure/sql-database/sql-database-technical-overview#built-in-intelligence
-      html: <p>Inbyggd intelligens hjälper dig att avsevärt minska kostnaderna för att köra och hantera databaser och maximerar både prestanda och säkerhet för programmet.</p>
+    - href: /azure/sql-database/sql-database-monitoring-tuning-index
+      html: <p>Inbyggd övervakning och intelligent justering hjälper dig att avsevärt minska kostnaderna för att köra och hantera databaser och maximerar programmets prestanda.</p>
       image:
         src: media/index/i_intelligence.svg
-      title: Inbyggd intelligens
+      title: Övervakning och justering
 - title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
