--- a/articles/mariadb/index.yml
+++ b/articles/mariadb/index.yml
@@ -1,25 +1,21 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 5b6fd87720b57b34429489c72ec60bc77b3870bc
-ms.sourcegitcommit: 6b7c8b44361e87d18dba8af2da306666c41b9396
+ms.openlocfilehash: dd2f984c74dc797bb3acbaa3f74cb6c8aa2028c0
+ms.sourcegitcommit: 71ee622bdba6e24db4d7ce92107b1ef1a4fa2600
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/12/2018
-ms.locfileid: "51568877"
+ms.lasthandoff: 12/17/2018
+ms.locfileid: "53547838"
 documentType: LandingData
 title: Azure Database for MariaDB-dokumentation
 metadata:
   title: Dokumentation om Azure MariaDB – självstudier, API-referens | Microsoft Docs
-  description: Azure Database for MariaDB är en relationsdatabastjänst i Microsoft-molnet som är utformad för utvecklare baserat på MariaDB-databasmotorn för öppen källkod.
-  author: czeumault
-  manager: carolz
-  ms.service: mariadb
-  ms.tgt_pltfrm: na
-  ms.devlang: na
-  ms.topic: landing-page
-  ms.date: 04/13/2017
-  ms.author: carolz
-abstract:
   description: Azure Database for MariaDB är en relationsdatabastjänst baserad på MariaDB-servermotorn för öppen källkod.  Det är en fullständigt hanterad databas som tjänst, för hantering av verksamhetskritisk arbetsbelastning med förutsägbara prestanda och dynamisk skalbarhet. Utveckla program med Azure Database for MariaDB och använd valfria verktyg för öppen källkod och plattform. Lär dig hur du använder Azure Database for MariaDB med våra snabbstarter, självstudier och exempel.
+  author: ajlam
+  ms.author: andrela
+  ms.service: mariadb
+  ms.topic: landing-page
+  ms.date: 12/13/2018
+  abstract: 
 sections:
 - title: Snabbstarter på 5 minuter
   items:
