--- a/articles/mysql/index.yml
+++ b/articles/mysql/index.yml
@@ -1,25 +1,21 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: aab2881462eafdc00bb0f3329f68789f07225773
-ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
+ms.openlocfilehash: ccb64441ced792009669eb95f5311ff309c58e00
+ms.sourcegitcommit: 71ee622bdba6e24db4d7ce92107b1ef1a4fa2600
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/24/2018
-ms.locfileid: "46955837"
+ms.lasthandoff: 12/17/2018
+ms.locfileid: "53543758"
 documentType: LandingData
 title: Azure Database för MySQL-dokumentation
 metadata:
   document_id: 8d915ae6-9101-ad37-0736-3eaa59c2dd34
   title: Dokumentation om Azure MYSQL – självstudier, API-referens | Microsoft Docs
   description: Azure Database för MySQL är en relationsdatabastjänst i Microsoft-molnet som är utformad för utvecklare baserat på MySQL-databasmotorn för öppen källkod.
-  services: mysql
-  author: czeumault
-  manager: carolz
+  author: ajlam
+  ms.author: andrela
   ms.service: mysql
-  ms.tgt_pltfrm: na
-  ms.devlang: na
   ms.topic: landing-page
-  ms.date: 04/13/2017
-  ms.author: carolz
+  ms.date: 12/13/2018
 abstract:
   description: Azure Database för MySQL är en relationsdatabastjänst baserad på MySQL-servermotorn för öppen källkod.  Det är en fullständigt hanterad databas som tjänst, för hantering av verksamhetskritisk arbetsbelastning med förutsägbara prestanda och dynamisk skalbarhet. Utveckla program med Azure Database för MySQL och använd valfria verktyg för öppen källkod och plattform. Lär dig hur du använder Azure Database för MySQL med våra snabbstarter, självstudier och exempel.
 sections:
