--- a/articles/site-recovery/toc.yml
+++ b/articles/site-recovery/toc.yml
@@ -66,8 +66,8 @@ items:
     href: site-recovery-faq.md
   - name: Om haveriberedskap för virtuell Azure-dator till Azure
     items:
-    - name: Arkitektur för Azure till Azure
-      href: azure-to-azure-architecture.md
+    - name: Vanliga frågor
+      href: azure-to-azure-common-questions.md
     - name: Stödmatris för Azure till Azure
       href: azure-to-azure-support-matrix.md
     - name: Accelererat nätverk med haveriberedskap för virtuella Azure-datorer
@@ -440,9 +440,9 @@ items:
     href: https://azure.microsoft.com/pricing/calculator/
   - name: Tjänstuppdateringar
     href: https://azure.microsoft.com/updates/?product=site-recovery
-ms.openlocfilehash: a4d7fba88c362d9d2c0f19cba022da46b0927775
-ms.sourcegitcommit: c37122644eab1cc739d735077cf971edb6d428fe
+ms.openlocfilehash: c08b4dea562a8f43d1fb7c331858598b8121888f
+ms.sourcegitcommit: 71ee622bdba6e24db4d7ce92107b1ef1a4fa2600
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/14/2018
-ms.locfileid: "53409827"
+ms.lasthandoff: 12/17/2018
+ms.locfileid: "53545764"
